<resources>
    <string name="app_name">MentorConnect</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already Have an Account? Login</string>
    <string name="password_and_confirmation_do_not_match">Password and confirmation do not match</string>
    <string name="password_confirmation_is_required">Password confirmation is required</string>
    <string name="password_is_required">Password is required</string>
</resources>